syntax = "proto3";

package partyaffairs.api.partyaffairs.banner.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "partyaffairs.api.partyaffairs.banner.v1";
option java_outer_classname = "BannerV1";

import "validate/validate.proto";

message ListBannerRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional string title = 5[(validate.rules).string = {min_len: 1,max_len: 40}];
  optional bool status = 6;
}

message ListBannerReply {
  message Banner {
    uint32 id = 1;
    string title = 2;
    string src = 3;
    optional string path = 4;
    optional int32 weight = 5;
    optional bool status = 6;
    uint32 createdAt = 7;
    uint32 updatedAt = 8;
  }
  uint32 total = 1;
  repeated Banner list = 2;
}

message CreateBannerRequest {
  string title = 1[(validate.rules).string = {max_len: 40,min_len: 1}];
  string src = 2[(validate.rules).string = {min_len: 1}];
  optional string path = 3;
  optional int32 weight = 4;
  optional bool status = 5;
}

message CreateBannerReply {
  uint32 id = 1;
}

message UpdateBannerRequest {
  uint32 id = 1;
  string title = 2;
  string src = 3;
  optional string path = 4;
  optional int32 weight = 5;
  optional bool status = 6;
}

message UpdateBannerReply {
}

message DeleteBannerRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteBannerReply {
}

